# meditation_app

./: README.md
meditation_app/: ButtonsBar.qml  CMakeLists.txt  StatsView.qml  en_GB.ts  main.cpp  main.qml  main_view.qml  meditationmodel.cpp  qml.qrc  settings_view.qml
meditation_app/logic/: meditationconfig.h  meditationcontroller.cpp  meditationcontroller.h  meditationstate.h  timer.cpp  timer.h
meditation_app/model/: meditationmodel.cpp  meditationmodel.h  statsmodel.cpp  statsmodel.h
meditation_app/qml/: ButtonsBar.qml  Constants.qml  CustomSpinBox.qml  MeditationPrepView.qml  MeditationView.qml  SettingsView.qml  StatsView.qml  main.qml
